CHANGES - 2016-06-12
--------------------

CHANGES IN Mini-XML 2.10

	- The version number in mxml.h was wrong (Bug #532)
	- The mxml.spec file was out of date (Bug #521)
	- mxmlDelete used a recursive algorithm which could require large
	  amounts of stack space depending on the file (Bug #549, CVE-2016-4570)
	- mxmlWrite* used a recursive algorithm which could require large
	  amounts of stack space depending on the file (Bug #549, CVE-2016-4571)


CHANGES IN Mini-XML 2.9

	- mxmlLoad* did not correctly load value nodes with MXML_NO_CALLBACK
	  or MXML_TEXT_CALLBACK (Bug #502)


CHANGES IN Mini-XML 2.8

	- Now call docsetutil using xcrun on OS X (Bug #458)
	- mxmldoc did not escape special HTML characters inside @code foo@
	  comments.
	- Fixed a memory leak in mxmlElementDeleteAttr (Bug #452)
	- Added MXML_MAJOR/MINOR_VERSION definitions to mxml.h (Bug $461)
	- Fixed a bug reading UTF-16 characters from a file (Bug #454)
	- Fixed a memory leak when loading invalid XML (Bug #496)
	- Fixed an XML fragment loading problem (Bug #494)


CHANGES IN Mini-XML 2.7

	- Added 64-bit configurations to the VC++ project files (STR #129)
	- Fixed conformance of mxmldoc's HTML and CSS output.
	- Added data accessor ("get") functions and made the mxml_node_t and
	  mxml_index_t structures private but still available in the Mini-XML
	  header to preserve source compatibility (STR #118)
	- Updated the source headers to reference the Mini-XML license and its
	  exceptions to the LGPL2 (STR #108)
	- Fixed a memory leak when loading a badly-formed XML file (STR #121)
      	- Added a new mxmlFindPath() function to find the value node of a
	  named element (STR #110)
	- Building a static version of the library did not work on Windows
	  (STR #112)
	- The shared library did not include a destructor for the thread-
	  specific data key on UNIX-based operating systems (STR #103)
	- mxmlLoad* did not error out on XML with multiple root nodes (STR #101)