@@ -5,6 +5,8 @@ CHANGES IN Mini-XML 2.10
 
 	- The version number in mxml.h was wrong (Bug #532)
 	- The mxml.spec file was out of date (Bug #521)
+	- mxmlLoad* and mxmlSAXLoad* did not properly create text nodes when
+	  MXML_TEXT_CALLBACK was specified (Bug #531)
 	- mxmlDelete used a recursive algorithm which could require large
 	  amounts of stack space depending on the file (Bug #549, CVE-2016-4570)
 	- mxmlWrite* used a recursive algorithm which could require large
